# scout-api

./: .dockerignore  .engineering_manifest.db.bak  .env.example  .gitignore  .pre-commit-config.yaml  BUILD_LEDGER.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
.pipeline/: .engineering_manifest.db.bak  .keep  CONTEXT.md  ISSUES.md
.pipeline/modifications/: checkpoint.txt  phase_4_implementation.md
.pipeline/prototype/: FINDINGS.md  deps.py  docker-compose.yml  poc.py  requirements.txt
config/: app_config.dev.yaml  app_config.prod.yaml  app_config.staging.yaml  app_config.yaml
config/prompts/: qa_synthesis.yaml
docker/: entrypoint.sh
docs/: INTEGRATION_GUIDE.md  features-registry.md  tech-debt.md
docs/adr/: 0000-template.md  0001-knowledge-partitioned-by-collection.md
docs/api/: COLLECTIONS.md  ERROR_CODES.md  QA.md  SESSIONS.md  SOURCES.md
docs/config/: CONFIGURATION.md  SECRETS.md
docs/ops/: EVENTS.md  HEALTH_CHECKS.md  METRICS.md
migrations/: 001_initial_schema.sql  002_session_activity_output.sql  003_processing_columns.sql  004_briefs_citations.sql  005_search_index.sql
scripts/: ci_check.sh  migrate.py  mutmut_runner.sh
src/scout_api/: __init__.py  config.py  db.py  errors.py  events.py  health.py  main.py  observability.py  worker.py
tests/: conftest.py  test_config.py  test_db.py  test_health.py  test_main.py
tests/briefs/: test_repository.py  test_router.py
tests/collections/: test_observability.py  test_repository.py  test_router.py
tests/qa/: test_mcp.py  test_repository.py  test_router.py  test_service.py  test_synthesizer.py
tests/search/: test_cache.py  test_dependencies.py  test_mcp.py  test_repository.py  test_router.py  test_service.py
tests/sessions/: test_repository.py  test_router.py
tests/sources/: test_adapters_production.py  test_chunker.py  test_contracts.py  test_dependencies.py  test_embedder.py  test_fetcher.py  test_mcp.py  test_observability.py  test_processing_errors.py  test_processing_repository.py  test_queue.py  test_repository.py  test_router.py  test_service.py  test_storage.py  test_worker.py  test_worker_lifecycle.py
tests/test_infra/: __init__.py  test_infra_modules.py
(+49 files in other folders)
