[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-api"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "slowapi>=0.1.9",
    # ── Observability ────────────────────────────────────────────────────────
    "structlog>=24.1",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20",
    # ── Resilience ───────────────────────────────────────────────────────────
    "tenacity>=8.3",
    "circuitbreaker>=2.0",
    # ── Config & secrets ─────────────────────────────────────────────────────
    "pydantic-settings>=2.3",
    "PyYAML>=6.0",
    # ── Auth ─────────────────────────────────────────────────────────────────
    "PyJWT>=2.8",
    # ── HTTP client ──────────────────────────────────────────────────────────
    "httpx>=0.27",
    # ── [py:postgres] overlay ────────────────────────────────────────────────
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "hypothesis>=6",
    "ruff>=0.4",
    "mypy>=1.10",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pip-tools>=7",
    "pre-commit>=3.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "integration: requires external services (.env fully configured, skipped in CI by default)",
    "slow: tests that are intentionally slow (load tests, etc.)",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "B",
    "S",
    "C901",
]
ignore = [
    "S101",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false
